tried to fix csrf error

--- a/phylogenize_default.cfg
+++ b/phylogenize_default.cfg
@@ -1,4 +1,4 @@
-APPLICATION_ROOT = '/var/www/phylogenize/'
+APPLICATION_ROOT = '/home/pbradz/projects/phylogenize/'
 UPLOAD_FOLDER = 'instance/results/'
 UPLOADED_FILES_DEST = 'instance/results/'
 REPORT_TEMPLATE_PATH = 'phylogenize-report.Rmd'
